[gd_scene load_steps=7 format=3 uid="uid://btxttejofd101"]

[ext_resource type="LabelSettings" uid="uid://bg54otcrdtvda" path="res://Resources/grey_font_32.tres" id="1_diq3n"]
[ext_resource type="Script" uid="uid://dgdx11f71p3v2" path="res://Scenes/GameUI/GameUi.gd" id="1_jwnss"]
[ext_resource type="LabelSettings" uid="uid://dmwhf2ao01xpw" path="res://Resources/sky_blue_font_85.tres" id="2_556m7"]
[ext_resource type="FontFile" uid="uid://bj8aaf7exatbs" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_556m7"]
[ext_resource type="AudioStream" uid="uid://df6gbqmcf3o4t" path="res://assets/audio/jazzyfrenchy.mp3" id="4_iq8cv"]

[sub_resource type="LabelSettings" id="LabelSettings_556m7"]
font = ExtResource("3_556m7")
font_size = 40
outline_size = 1
outline_color = Color(0.117647, 0.117647, 0.117647, 1)
shadow_size = 10
shadow_color = Color(0.117647, 0.117647, 0.117647, 1)
shadow_offset = Vector2(2, 2)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jwnss")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 10 "
label_settings = ExtResource("1_diq3n")

[node name="AttemptsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attempt 0 "
label_settings = ExtResource("1_diq3n")

[node name="LevelComplete" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Level Complete" type="Label" parent="MarginContainer/LevelComplete"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level Complete!"
label_settings = ExtResource("2_556m7")
horizontal_alignment = 1

[node name="Level Complete2" type="Label" parent="MarginContainer/LevelComplete"]
layout_mode = 2
size_flags_horizontal = 4
text = "Press Space"
label_settings = SubResource("LabelSettings_556m7")
horizontal_alignment = 1

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = ExtResource("4_iq8cv")
volume_db = 1.0
parameters/looping = true
